# pg-amqp-bridge

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  circle.yml
env/: definitions.json  docker-compose.yml  rabbitmq.conf
src/: bridge.rs  config.rs  lib.rs  main.rs
tests/: docker-compose.yml  main.rs
