[package]
name = "pgsql-amqp-bridge"
version = "0.1.0"
authors = ["steve-chavez <stevechavezast@gmail.com>"]

[[test]]
name = "main"
harness = false

[dependencies]
amqp = "0.1.0"
env_logger = "0.4.2"
fallible-iterator = "0.1.3"
log = "0.3.7"
postgres = "0.14.1"

[dev-dependencies]
rustc-test = "0.1"
amq-protocol = "^0.16"
futures = "0.1.12"
lapin-futures = "0.8.2"
tokio-core = "0.1.6"
