[package]
name = "pg-amqp-bridge"
version = "0.0.8"
authors = ["steve-chavez <stevechavezast@gmail.com>"]
edition = "2018"


[[test]]
name = "main"
harness = false

[dependencies]
amqp = "0.1.3"
env_logger = "0.8.3"
fallible-iterator = "0.2.0"
log = "0.4.14"
postgres = "0.19.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"
maplit = "1.0.2"

[dev-dependencies]
rustc-test = "0.3.0"
futures = "0.1.12"
lapin-futures = "0.9.0"
tokio-core = "0.1.6"
